# NexusIR

./: .gitignore  CMakeLists.txt  ESPNOW_MANAGEMENT.md  Optimize_web.html  README.md  README_VI.md  WORKFLOW.md  deploy.sh  instructed.md  partitions.csv  scratch_plan.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
.cache/clangd/index/: aead_aegis128l.c.3E399F3F40D01401.idx  aead_aegis128l.c.4D50F2914FCC8F2E.idx  aead_aegis256.c.87DF32671168F2E2.idx  (+932 more)
.gemini/: WEB_SERVER_ANALYSIS.md  WEB_SERVER_API_REFERENCE.md  WEB_UI_UPGRADE_TASKS.md
components/app_hap_setup_payload/: CMakeLists.txt  README.md
components/drv_aht20/: CMakeLists.txt  README.md
components/drv_button/: CMakeLists.txt  README.md
components/drv_ir_rmt/: CMakeLists.txt  README.md
components/drv_led_strip/: CMakeLists.txt  README.md
components/goku_homekit/: CMakeLists.txt
components/goku_homekit/include/: goku_homekit.h
components/goku_homekit/src/: goku_homekit.c
components/goku_ota/: CMakeLists.txt
components/goku_rainmaker/: CMakeLists.txt
components/goku_rainmaker/include/: goku_rainmaker.h
components/goku_rainmaker/src/: goku_rainmaker.c
components/goku_sensor/: CMakeLists.txt
components/goku_web/: CMakeLists.txt
components/goku_wifi/: CMakeLists.txt
components/goku_wifi_portal/: CMakeLists.txt
components/int_homekit/: CMakeLists.txt  README.md
components/int_homekit/include/: int_homekit.h
components/int_homekit/src/: int_homekit.c
components/int_rainmaker/: CMakeLists.txt  README.md
components/mgr_ac_logic/: CMakeLists.txt  README.md
components/mgr_display/: CMakeLists.txt  Kconfig  README.md
components/mgr_display/include/: mgr_display.h
components/mgr_display/src/: mgr_display.c  mgr_display_ui.c
components/mgr_fan_logic/: CMakeLists.txt  README.md
components/mgr_ir_protocols/: CMakeLists.txt  README.md
components/mgr_ir_protocols/include/: ir_ac_registry.hpp  ir_engine.h  ir_protocol_daikin.hpp  ir_protocol_mitsubishi.hpp  ir_protocol_nec.hpp  ir_protocol_samsung.hpp  ir_universal.hpp  mgr_ir_protocols.h
components/mgr_ir_protocols/src/: ir_ac_registry.cpp  ir_protocol_stubs.cpp  ir_universal.cpp  mgr_ir_impl.cpp  mgr_ir_main.c  mgr_ir_matrix.c
components/mgr_relay/: CMakeLists.txt  README.md
components/svc_espnow/: CMakeLists.txt  README.md
components/svc_logging/: CMakeLists.txt  README.md  svc_log.c
components/svc_mdns/: CMakeLists.txt  README.md
components/svc_nvs/: CMakeLists.txt  README.md  svc_nvs.c
components/svc_ota/: CMakeLists.txt  README.md
components/svc_weather/: CMakeLists.txt  README.md
components/svc_web_server/: CMakeLists.txt  README.md  compress_web.sh
components/svc_web_server/include/: svc_web_server.h
components/svc_web_server/src/: svc_web_server.c
components/svc_web_server/web_src/: app.js  index.html  style.css
components/svc_web_server/www/: app.js  index.html  style.css
components/svc_wifi/: CMakeLists.txt  README.md
components/svc_wifi_prov/: CMakeLists.txt  README.md
components/sys_utils/: CMakeLists.txt  README.md  sys_mem.c
docs/: PROJECT_DOCS.md
firmware/v1.3.0/: FLASHING.md
hardware/3d_print/: Body.3mf  Button.3mf  Holder.3mf  Top.3mf
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  main.c
ota_server/: main.py  models.py  requirements.txt  run.sh
ota_server/static/: index.html  script.js  style.css
test_app/: CMakeLists.txt  sdkconfig.defaults
test_app/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  test_app_main.c
(+209 files in other folders)
